--- a/css/owl.theme.default.css
+++ b/css/owl.theme.default.css
@@ -13,6 +13,9 @@
   position: absolute;
   bottom: 40px;
   }
+#owl-two .owl-nav {
+  position: static
+}
   .owl-theme .owl-nav [class*='owl-'] {
     color: #FFF;
     font-size: 14px;
@@ -22,6 +25,7 @@
     display: inline-block;
     cursor: pointer;
     border-radius: 3px; }
+}
 /*    .owl-theme .owl-nav [class*='owl-']:hover {
       background: #869791;
       color: #FFF;
@@ -57,5 +61,8 @@
     bottom: auto;
     left: 50%;
     margin-left: -95px;
+  }
+  #owl-two .owl-nav{
+    margin-left: -50px;
   }
 }
