--- a/css/owl.theme.default.css
+++ b/css/owl.theme.default.css
@@ -14,7 +14,8 @@
   bottom: 40px;
   }
 #owl-two .owl-nav {
-  position: static
+  position: static;
+  margin-top: 50px;
 }
   .owl-theme .owl-nav [class*='owl-'] {
     color: #FFF;
